--- a/Hawk/Lang/DefaultLanguage.xaml
+++ b/Hawk/Lang/DefaultLanguage.xaml
@@ -1045,7 +1045,7 @@
         填入{{key_764}，能够成功获取XPath, 编写属性名称，点击{{}}，即可添加一个属性。类似地，再填入30535，设置属性名称为“单价”，即可添加另外一个属性。
 
         在`搜索属性`的文本框中，输入你要获取的关键字，由于关键字在网页中可能出现多次，可连续点击`继续搜索`，在多个结果间切换，左侧的html源码会对搜索的结果进行高亮。
-        > 请注意观察搜索的关键字在网页中的位置，是否符合预期，否则抓取数据可能会有问题。尤其在List模式。
+        >请注意观察搜索的关键字在网页中的位置，是否符合预期，否则抓取数据可能会有问题。尤其在List模式。
         > 如果需要抓取本页面的多块数据，可新建多个` {{smartcrawler_name}} `，分别进行配置。
         如果发现有错误，可点击**编辑集合**，对属性进行删除，修改和排序。
         你可以类似的将所有要抓取的特征字段添加进去，或是直接点击 {{key_623}} ，系统会根据目前的属性，推测其他属性。
@@ -1674,9 +1674,9 @@
         - 任务： 系统仅仅提供了两种任务：  {{smartcrawler_name}} 和数据清洗，任务可以被新建，保存和加载。
         - 模块： 一个任务会包含多个模块，例如数据清洗中会有`从文本生成`,`从爬虫转换`等
         - 工程： 多个任务组成一个工程，工程可以以xml方式保存和加载
-        - 数据表：在内存中存储的数据表，速度快，但是容量有限，存储小型数据时使用
+        - 数据表: 在内存中存储的数据表，速度快，但是容量有限，存储小型数据时使用
         - 数据库(连接器)： Hawk通过连接器连接不同的数据库，如MongoDB，sqlite等。
-        - 列： 数据清洗里的列，可参考像Excel里的列，在 {{smartcrawler_name}} 里，一个属性对应一个列
+        - 列： 数据清洗里的列，可参考像Excel里的列，在 {{smartcrawler_name}} 里，一个属性对应一个列
         - 文档： 可理解为数据清洗里的一行，它是键值对构成的字典，如`key1:value,key2:value2`
         - 单元格 ： 文档中的一个单元格，就像Excel 那样
         - 流:  多个文档的序列，可能是有限或无穷的，在早期版本的Hawk中，这个概念大量使用。
