--- a/Hawk.ETL.Controls/SmartCrawlerUI.xaml
+++ b/Hawk.ETL.Controls/SmartCrawlerUI.xaml
@@ -11,6 +11,7 @@
              x:Class="Hawk.ETL.Controls.SmartCrawlerUI"
              d:DesignHeight="630.667" d:DesignWidth="943" mc:Ignorable="d">
     <UserControl.Resources>
+    	    <wpfPropertyGrid:EnumValueConverter x:Key="enumValueConverter" />
         <mvvm:BindingProxy x:Key="BindingProxy" Data="{Binding}" />
         <DataTemplate x:Key="DataTemplate1">
             <StackPanel Orientation="Horizontal" Width="Auto">
@@ -97,19 +98,19 @@
             <RowDefinition Height="50" />
             <RowDefinition Height="178*" />
         </Grid.RowDefinitions>
-        <Grid Margin="0,10,8,12.38" d:LayoutOverrides="Width">
+        <Grid Margin="0,10,8,12.38" d:LayoutOverrides="Width" ToolTip="{DynamicResource crawler_url_desc}" >
 
             <Label Content="{DynamicResource key_759}" VerticalAlignment="Center" HorizontalAlignment="Left" />
             <TextBox wpfPropertyGrid:TextBoxExtender.CommitOnEnter="True"
                      Text="{Binding URL, Mode=TwoWay, UpdateSourceTrigger=LostFocus}" VerticalAlignment="Center"
-                     Margin="80,0,300,0" ToolTip="{DynamicResource crawler_url_desc}" />
+                     Margin="80,0,300,0"  />
             <StackPanel Orientation="Horizontal" Margin="0,0,12.16,0" HorizontalAlignment="Right"
                         d:LayoutOverrides="HorizontalAlignment">
 
                 <Button DataContext="{Binding Commands3[0]}" Content="{Binding Text}" Command="{Binding}" Height="25"
                         VerticalAlignment="Top" Width="70" Margin="0,0,16,0" />
                 <Button DataContext="{Binding Commands2[2]}" Content="{Binding Text}" Command="{Binding}" Height="25"
-                        VerticalAlignment="Top" Width="70" Margin="0,0,8,0" />
+                        VerticalAlignment="Top" Width="70" Margin="0,0,8,0" ToolTip="{DynamicResource crawler_feellucky}" />
                 <Button DataContext="{Binding Commands2[3]}" Content="{Binding Text}" Command="{Binding}" Height="25"
                         VerticalAlignment="Top" Width="70" Margin="0,0,8,0" />
 
@@ -196,7 +197,7 @@
                                  wpfPropertyGrid:TextBoxExtender.CommitOnEnter="True" d:LayoutOverrides="Height"
                                  Grid.Column="1" FontSize="16" />
                     </Grid>
-                    <GroupBox Header="{DynamicResource key_763}" MinHeight="115" Margin="8,8,8,0" Height="180" d:LayoutOverrides="Height">
+                    <GroupBox Header="{DynamicResource key_763}" MinHeight="115"  ToolTip="{DynamicResource SmartCrawler_manual_mode}" Margin="8,8,8,0" Height="180" d:LayoutOverrides="Height">
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="0.3*" />
@@ -216,7 +217,7 @@
                                      Height="40.907" VerticalAlignment="Top" />
                             <Button DataContext="{Binding Commands2[0]}" Content="{Binding Text}" Command="{Binding}"
                                     VerticalAlignment="Top" Grid.Column="1" HorizontalAlignment="Right" Width="50"
-                                    Height="25" Margin="0,132.359,3.509,0" />
+                                    Height="25" Margin="0,132.359,3.509,0"  ToolTip="{DynamicResource crawler_url_desc}" />
                             <Button DataContext="{Binding Commands2[1]}" Content="{Binding Text}" Command="{Binding}"
                                     Margin="0,40.5,3.509,0" VerticalAlignment="Top" Grid.Column="1" Height="25"
                                     HorizontalAlignment="Right" Width="50" />
@@ -226,12 +227,18 @@
                             </TextBlock>
                             <TextBox Grid.Column="1" Margin="8,132.364,80,0" TextWrapping="Wrap"
                                      Text="{Binding SelectName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                                     VerticalAlignment="Top" />
+                                     VerticalAlignment="Top"  ToolTip="{DynamicResource crawler_url_desc}" />
                             <TextBlock Margin="8,8,0,0" TextWrapping="Wrap" Text="{DynamicResource key_188}" VerticalAlignment="Top"
                                        HorizontalAlignment="Left" />
                             <ComboBox Grid.Column="1" Margin="8,5.01,80,0"
                                       ItemsSource="{attributes:EnumValues {x:Type connectors:ScriptWorkMode}}"
-                                      SelectedItem="{Binding IsMultiData}" VerticalAlignment="Top" />
+                                      SelectedItem="{Binding IsMultiData}" ToolTip="{DynamicResource smartcrawler_script_mode}" VerticalAlignment="Top" >
+                            		 <ComboBox.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding ., Converter={StaticResource enumValueConverter}}" />
+                </DataTemplate>
+           				 </ComboBox.ItemTemplate>                       
+									  </ComboBox>
                         </Grid>
                     </GroupBox>
                     <GroupBox Header="{DynamicResource key_767}" Margin="8,8,8,0" Height="150">
@@ -243,7 +250,7 @@
 
 
                             <TextBlock Margin="6.759,10,0,0" TextWrapping="Wrap" Text="{DynamicResource key_748}"
-                                       ToolTip="{DynamicResource key_768}" VerticalAlignment="Top"
+                                       VerticalAlignment="Top"  ToolTip="{DynamicResource crawler_xpath_root}"
                                        HorizontalAlignment="Left"
                                        d:LayoutOverrides="HorizontalAlignment, VerticalAlignment" />
                             <TextBox Margin="8,8,80,0" TextWrapping="Wrap"
@@ -252,7 +259,7 @@
                             <ComboBox Margin="51.692,8,0,0"
                                       ItemsSource="{attributes:EnumValues {x:Type connectors:SelectorFormat}}"
                                       SelectedItem="{Binding RootFormat}"
-                                      ToolTip="{DynamicResource key_750}"
+                                      ToolTip="{DynamicResource key_750}"  
                                       VerticalAlignment="Top" HorizontalAlignment="Left"
                                       d:LayoutOverrides="HorizontalAlignment, VerticalAlignment" Width="73.875" />
                             <TextBlock Text="{Binding CrawlItems.Count, StringFormat=Total:\{0\}}"
@@ -274,13 +281,13 @@
                                 <ColumnDefinition Width="0.3*" />
                                 <ColumnDefinition Width="0.7*" />
                             </Grid.ColumnDefinitions>
-                            <TextBlock Margin="8,8,0,0" TextWrapping="Wrap" Text="{DynamicResource key_647}" VerticalAlignment="Top"
+                            <TextBlock Margin="8,8,0,0" TextWrapping="Wrap" ToolTip="{DynamicResource crawler_share_cookie}" Text="{DynamicResource key_647}" VerticalAlignment="Top"
                                        HorizontalAlignment="Left" />
                             <ComboBox Margin="8,5.01,80,0" DataContext="{Binding ShareCookie}"
                                       ItemsSource="{Binding Collection}" SelectedItem="{Binding _SelectItem}"
-                                      VerticalAlignment="Top" Grid.Column="1" />
+                                      VerticalAlignment="Top" Grid.Column="1"  ToolTip="{DynamicResource crawler_share_cookie}"/>
                             <TextBlock Margin="8,42.5,0,0" TextWrapping="Wrap" Text="{DynamicResource key_645}" VerticalAlignment="Top"
-                                       HorizontalAlignment="Left" />
+                                       HorizontalAlignment="Left"   ToolTip="{DynamicResource crawler_super_mode}"/>
                             <CheckBox Margin="8,42.5,80,0" IsChecked="{Binding IsSuperMode}"
                                       VerticalAlignment="Top"
                                       Grid.Column="1"  ToolTip="{DynamicResource crawler_super_mode}"/>
@@ -291,7 +298,7 @@
                                     Height="25" VerticalAlignment="Top" Margin="136.8,78,0,0" Grid.Column="1"
                                     HorizontalAlignment="Left" Width="80" />
                             <TextBlock Margin="8,78,0,0" TextWrapping="Wrap" VerticalAlignment="Top"
-                                       HorizontalAlignment="Left">
+                                       HorizontalAlignment="Left" ToolTip="{DynamicResource crawler_dynamic_sniff}">
                                 <Run Language="zh-cn" Text="{DynamicResource key_769}" />
                             </TextBlock>
                             <Button DataContext="{Binding Commands[2]}" Content="{Binding Text}" Command="{Binding}"
