fix write project issue

--- a/Hawk/Lang/zh-CN.xaml
+++ b/Hawk/Lang/zh-CN.xaml
@@ -1720,7 +1720,7 @@
     <system:String x:Key="CrawlerTF_method_get">
      ### 一般的get请求
 
-    一般情况下, 将`从爬虫转换`拖入到对应的URL列中，通过下拉菜单选择要调用的爬虫名称，即可完成所有的配置：
+    一般情况下, 将从爬虫转换拖入到对应的URL列中，通过下拉菜单选择要调用的爬虫名称，即可完成所有的配置：
 
     ![请求设置][http://static.zybuluo.com/buptzym/hgwpmxsjz0gun5epqt2087wh/image_1avc2t94d3l51sofkah8m1lrrm.png]
 
@@ -1738,7 +1738,7 @@
 
         post请求时，Hawk要给服务器需要传递两个参数：url 和post。一般来说，在执行post请求时，url是稳定的，post值是动态改变的。 
 
-        首先要配置调用的网页采集器为`post`模式（打开网页采集器，请求详情，模式->下拉菜单）。 
+        首先要配置调用的网页采集器为`post`模式（打开网页采集器，请求详情，模式->下拉菜单）。 
 
         之后，需要将`从爬虫转换`拖到要调用的url列上。如果没有url列，可以通过`添加新列`，生成要访问的url列。
 
@@ -1779,7 +1779,7 @@
 
     <system:String x:Key="generator_desc" xml:space="preserve">
 
-    顾名思义，生成器就是通过一定的参数，生成一个文档列表的组件。生成器通常位于任务开头，可从文本，文件，数据库读取数据。 或者从一个区间内生成纵向的数字和时间。
+    顾名思义，生成器就是通过一定的参数，生成一个文档列表的组件。生成器通常位于任务开头，可从文本，文件，数据库读取数据。 或者从一个区间内生成纵向的数字和时间。
 
     它与转换器有很多相似之处，但是明显不同：
     
@@ -1861,7 +1861,7 @@
     经过大量实践，如果不这么做，每个新数据后面，都会跟上原始的老数据，如果1转20，则老数据会重复生成20次，这是没有必要的。有时不得不拖入大量的`删除该列`来处理。
     当然，有时转换时需要包含原始数据的部分列，则可在转换器的`新列名`中填写要`鲤鱼跳龙门`的列的名称，中间用空格分割。
 
-    -  在Hawk3中，还支持在新列名中输入`*`号，此时所有的原始列都会添到新的文档之中。
+    -  在Hawk3中，还支持在新列名中输入`*`号，此时所有的原始列都会添到新的文档之中。
     - 注意，UDAF的新列可能会覆盖掉原始列的数据，因此多检查列名，避免意料之外的覆盖
     </system:String>
     <system:String x:Key="transformer_type" xml:space="preserve">
